<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="126dp"
                    android:layout_height="157dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/main_top" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="50dp"
                    android:letterSpacing="0.03"
                    android:text="LOGIN"
                    android:textColor="#68329b"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:background="@drawable/login" />

            <EditText
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/sign"
                android:paddingLeft="20dp"
                android:text="@string/email" />

            <EditText
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/sign"
                android:paddingLeft="20dp"
                android:text="@string/password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:text="@string/forget_password"
                android:textColor="#68329b" />

            <Button
                android:layout_width="320dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/button"
                android:text="@string/login"
                android:textColor="#fff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="#68329b" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>