<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="126dp"
            android:layout_height="157dp"
            android:paddingBottom="10dp"
            android:src="@drawable/main_top"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_smart_planner"
            android:textSize="20sp"
            android:textColor="#68329b"
            android:letterSpacing="0.03"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

    <ImageView
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:background="@drawable/chat"
        android:layout_marginStart="5dp"/>

    <Button
        android:id="@+id/loginSignup_login"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:background="@drawable/button"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textColor="#fff"/>

    <Button
        android:id="@+id/loginSignup_signup"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:background="@drawable/sign"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:textColor="#68329b"/>

</LinearLayout>